Fix details template, load details json files

--- a/templates/phone-detail.html
+++ b/templates/phone-detail.html
@@ -1,16 +1,19 @@
-<div class="row">
+
+
+ <div class="row">
   <div class="col-xs-12 col-sm-4">
     <div class="phone-images">
-      <img ng-src="{{mainImageUrl}}">
+      <img ng-src="{{ 'public/' + phone.images[0] }}">
     </div>
     <ul class="phone-thumbs list-unstyled">
       <li ng-repeat="img in phone.images">
-        <img ng-src="{{img}}" ng-click="setImage(img)">
+        <img ng-src="{{'public/' + img}}">
       </li>
     </ul>
   </div>
+  
   <div class="col-xs-12 col-sm-8">
-    <h1>{{title}}</h1>
+    <h1>{{ phone.name }}</h1>
     <hr>
     <p>{{phone.description}}</p>
     <hr>
@@ -52,9 +55,9 @@
           <dt>Bluetooth</dt>
           <dd>{{phone.connectivity.bluetooth}}</dd>
           <dt>Infrared</dt>
-          <dd>{{phone.connectivity.infrared | checkmark}}</dd>
+          <dd>{{phone.connectivity.infrared}}</dd>
           <dt>GPS</dt>
-          <dd>{{phone.connectivity.gps | checkmark}}</dd>
+          <dd>{{phone.connectivity.gps}}</dd>
         </dl>
       </li>
       <li>
@@ -83,7 +86,7 @@
           <dt>Screen resolution</dt>
           <dd>{{phone.display.screenResolution}}</dd>
           <dt>Touch screen</dt>
-          <dd>{{phone.display.touchScreen | checkmark}}</dd>
+          <dd>{{phone.display.touchScreen}}</dd>
         </dl>
       </li>
       <li>
@@ -96,9 +99,9 @@
           <dt>Audio / headphone jack</dt>
           <dd>{{phone.hardware.audioJack}}</dd>
           <dt>FM Radio</dt>
-          <dd>{{phone.hardware.fmRadio | checkmark}}</dd>
+          <dd>{{phone.hardware.fmRadio}}</dd>
           <dt>Accelerometer</dt>
-          <dd>{{phone.hardware.accelerometer | checkmark}}</dd>
+          <dd>{{phone.hardware.accelerometer}}</dd>
         </dl>
       </li>
       <li>
