--- a/templates/phone-detail.html
+++ b/templates/phone-detail.html
@@ -3,11 +3,11 @@
  <div class="row">
   <div class="col-xs-12 col-sm-4">
     <div class="phone-images">
-      <img ng-src="{{ 'public/' + phone.images[0] }}">
+      <img ng-src="{{ 'public/' + mainImageUrl }}">
     </div>
     <ul class="phone-thumbs list-unstyled">
       <li ng-repeat="img in phone.images">
-        <img ng-src="{{'public/' + img}}">
+        <img ng-src="{{'public/' + img}}" ng-click="setImageUrl(img)">
       </li>
     </ul>
   </div>
@@ -55,9 +55,9 @@
           <dt>Bluetooth</dt>
           <dd>{{phone.connectivity.bluetooth}}</dd>
           <dt>Infrared</dt>
-          <dd>{{phone.connectivity.infrared}}</dd>
+          <dd>{{phone.connectivity.infrared | checkmark}}</dd>
           <dt>GPS</dt>
-          <dd>{{phone.connectivity.gps}}</dd>
+          <dd>{{phone.connectivity.gps | checkmark}}</dd>
         </dl>
       </li>
       <li>
@@ -86,7 +86,7 @@
           <dt>Screen resolution</dt>
           <dd>{{phone.display.screenResolution}}</dd>
           <dt>Touch screen</dt>
-          <dd>{{phone.display.touchScreen}}</dd>
+          <dd>{{phone.display.touchScreen | checkmark}}</dd>
         </dl>
       </li>
       <li>
@@ -99,9 +99,9 @@
           <dt>Audio / headphone jack</dt>
           <dd>{{phone.hardware.audioJack}}</dd>
           <dt>FM Radio</dt>
-          <dd>{{phone.hardware.fmRadio}}</dd>
+          <dd>{{phone.hardware.fmRadio | checkmark}}</dd>
           <dt>Accelerometer</dt>
-          <dd>{{phone.hardware.accelerometer}}</dd>
+          <dd>{{phone.hardware.accelerometer | checkmark}}</dd>
         </dl>
       </li>
       <li>
