--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,39 @@ body {
 body {
   padding-top: 70px;
 }
+
+.item.ng-enter,
+.item.ng-leave,
+.item.ng-move {
+  -webkit-transition: 0.2s linear all;
+  -moz-transition: 0.2s linear all;
+  -o-transition: 0.2s linear all;
+  transition: 0.2s linear all;
+}
+
+.item.ng-enter,
+.item.ng-move {
+  opacity: 0;
+  overflow: hidden;
+}
+
+.item.ng-move.ng-move-active,
+.item.ng-enter.ng-enter-active {
+  opacity: 1;
+}
+
+.item.ng-leave {
+  opacity: 1;
+  overflow: hidden;
+}
+
+.item.ng-leave.ng-leave-active {
+  opacity: 0;
+  height: 0;
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
 footer {
   padding: 30px 0;
 }
@@ -135,4 +168,14 @@ h2 {
 }
 .view-container.ng-leave-active {
     opacity: 0;
+}
+
+.base-class {
+  -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+  transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+}
+
+.base-class.my-class {
+  color: red;
+  font-size:3em;
 }
