--- a/templates/phone-detail.html
+++ b/templates/phone-detail.html
@@ -1,9 +1,7 @@
-
-
  <div class="row">
-  <div class="col-xs-12 col-sm-4">
+  <div class="col-xs-12 col-sm-4" ng-init="currImg = mainImageUrl">
     <div class="phone-images">
-      <img ng-src="{{ mainImageUrl }}">
+      <img class="phone" ng-src="{{ mainImageUrl }}">
     </div>
     <ul class="phone-thumbs list-unstyled">
       <li ng-repeat="img in phone.images">
